tests/fixtures/functional_patterns/negative/n33_vec_push_single.rs
fn add_item(mut vec: Vec<i32>, item: i32) -> Vec<i32> {
    vec.push(item);
    vec
}
